Fix menu and footer

--- a/aboutme.html
+++ b/aboutme.html
@@ -81,9 +81,10 @@
           <h4 class="description--green">Operator DTP</h4>
           <p class="description"><strong>Invest Company Corporation</strong></p>
           <p class="description2">skład i&nbsp;łamanie czasopisma „Piłka Nożna”<br><br>wysyłka materiałów do drukarni<br><br>tworzenie
-            infografik<br><br>obróbka zdjęć<br><br>tworzenie okładki (w zastępstwie)<br><br>* od października praca na
+            infografik<br><br>obróbka zdjęć<br><br>tworzenie okładki (w&nbsp;zastępstwie)<br><br>* od października
+            praca na
             1/4 etatu (tylko
-            w kolejne niedziele)</p>
+            w&nbsp;kolejne niedziele)</p>
         </div>
 
         <div class="gray-box--green-border-left">
