--- a/portfolio.html
+++ b/portfolio.html
@@ -34,158 +34,163 @@
     </ul>
   </nav>
 
-  <!-- HEADER -->
-  <header class="header-portfolio">
-    <h1 class="header-portfolio__title">portfolio</h1>
-    <h2 class="header-portfolio__subtitle">Oto przykładowe prace, które stworzyłem...</h2>
-  </header>
+  <div class="background">
+    <!-- HEADER -->
+    <header class="header-portfolio">
+      <h1 class="header-portfolio__title">portfolio</h1>
+      <h2 class="header-portfolio__subtitle">Oto przykładowe prace, które stworzyłem...</h2>
+    </header>
 
-  <main class="portfolio-container">
-    <figure class="green-box">
-      <a class="green-box__link" href="https://kp1976.github.io/LOAN-CALCULATOR/" target="_blank" rel="noopener">
-        <img class="green-box__example-img" src="img/Portfolio/kalkulator_pozyczkowy.jpg" alt="obraz aplikacji kalkulatora">
-        <h2 class="green-box__title">Kalkulator Pożyczkowy</h2>
-        <p class="green-box__text">Aplikacja oblicza miesięczną ratę kredytu do spłacenia. Całkowitą kwotę
-          pożyczki i&nbsp;zysk pożyczkodawcy.</p>
-      </a>
-    </figure>
+    <main class="portfolio-container">
+      <figure class="green-box">
+        <a class="green-box__link" href="https://kp1976.github.io/LOAN-CALCULATOR/" target="_blank" rel="noopener">
+          <img class="green-box__example-img" src="img/Portfolio/kalkulator_pozyczkowy.jpg" alt="obraz aplikacji kalkulatora">
+          <h2 class="green-box__title">Kalkulator Pożyczkowy</h2>
+          <p class="green-box__text">Aplikacja oblicza miesięczną ratę kredytu do spłacenia. Całkowitą kwotę
+            pożyczki i&nbsp;zysk pożyczkodawcy.</p>
+        </a>
+      </figure>
 
-    <figure class="green-box">
-      <a class="green-box__link" href="https://kp1976.github.io/LISTA-KSIAZEK" target="_blank" rel="noopener">
-        <img class="green-box__example-img" src="img/Portfolio/lista_ksiazek.jpg" alt="obraz aplikacji kalkulatora">
-        <h2 class="green-box__title">Lista Książek</h2>
-        <p class="green-box__text">Baza danych książek, gdzie dodajemy tytuł, autora i&nbsp;cenę książki.</p>
-      </a>
-    </figure>
+      <figure class="green-box">
+        <a class="green-box__link" href="https://kp1976.github.io/LISTA-KSIAZEK" target="_blank" rel="noopener">
+          <img class="green-box__example-img" src="img/Portfolio/lista_ksiazek.jpg" alt="obraz aplikacji kalkulatora">
+          <h2 class="green-box__title">Lista Książek</h2>
+          <p class="green-box__text">Baza danych książek, gdzie dodajemy tytuł, autora i&nbsp;cenę książki.</p>
+        </a>
+      </figure>
 
-    <figure class="green-box">
-      <a class="green-box__link" href="https://kp1976.github.io/TO-DOver3" target="_blank" rel="noopener">
-        <img class="green-box__example-img" src="img/Portfolio/lista_zadan.jpg" alt="obraz aplikacji kalkulatora">
-        <h2 class="green-box__title">Lista Zadań</h2>
-        <p class="green-box__text">Lista zadań do wykonania z&nbsp;możliwością kasowania, filtrowania
-          i&nbsp;modyfikowania konkretnego zadania.</p>
-      </a>
-    </figure>
+      <figure class="green-box">
+        <a class="green-box__link" href="https://kp1976.github.io/TO-DOver3" target="_blank" rel="noopener">
+          <img class="green-box__example-img" src="img/Portfolio/lista_zadan.jpg" alt="obraz aplikacji kalkulatora">
+          <h2 class="green-box__title">Lista Zadań</h2>
+          <p class="green-box__text">Lista zadań do wykonania z&nbsp;możliwością kasowania, filtrowania
+            i&nbsp;modyfikowania konkretnego zadania.</p>
+        </a>
+      </figure>
 
-    <figure class="green-box">
-      <a class="green-box__link" href="https://kp1976.github.io/LISTA-ZAKUPOW" target="_blank" rel="noopener">
-        <img class="green-box__example-img" src="img/Portfolio/lista_zakupow.jpg" alt="obraz aplikacji kalkulatora">
-        <h2 class="green-box__title">Lista Zakupów</h2>
-        <p class="green-box__text">Lista zakupów z&nbsp;możliwością kasowania i&nbsp;modyfikowania konkretnego
-          produktu.</p>
-      </a>
-    </figure>
+      <figure class="green-box">
+        <a class="green-box__link" href="https://kp1976.github.io/LISTA-ZAKUPOW" target="_blank" rel="noopener">
+          <img class="green-box__example-img" src="img/Portfolio/lista_zakupow.jpg" alt="obraz aplikacji kalkulatora">
+          <h2 class="green-box__title">Lista Zakupów</h2>
+          <p class="green-box__text">Lista zakupów z&nbsp;możliwością kasowania i&nbsp;modyfikowania konkretnego
+            produktu.</p>
+        </a>
+      </figure>
 
-    <figure class="green-box">
-      <a class="green-box__link" href="https://kp1976.github.io/Materialize-Biuro_Podrozy" target="_blank" rel="noopener">
-        <img class="green-box__example-img" src="img/Portfolio/materialize/biuro_podrozy.jpg" alt="obraz aplikacji kalkulatora">
-        <h2 class="green-box__title">Biuro Podróży</h2>
-        <p class="green-box__text">Strona zrobiona pod frameworkiem Materialize z&nbsp;galerią, wyszukiwarką
-          i&nbsp;kontaktem.</p>
-      </a>
-    </figure>
+      <figure class="green-box">
+        <a class="green-box__link" href="https://kp1976.github.io/Materialize-Biuro_Podrozy" target="_blank" rel="noopener">
+          <img class="green-box__example-img" src="img/Portfolio/materialize/biuro_podrozy.jpg" alt="obraz aplikacji kalkulatora">
+          <h2 class="green-box__title">Biuro Podróży</h2>
+          <p class="green-box__text">Strona zrobiona pod frameworkiem Materialize z&nbsp;galerią, wyszukiwarką
+            i&nbsp;kontaktem.</p>
+        </a>
+      </figure>
 
-    <figure class="green-box">
-      <a class="green-box__link" href="https://kp1976.github.io/Materialize-Biznes" target="_blank" rel="noopener">
-        <img class="green-box__example-img" src="img/Portfolio/materialize/biznes.jpg" alt="obraz aplikacji kalkulatora">
-        <h2 class="green-box__title">Strona Biznesowa</h2>
-        <p class="green-box__text">Strona zrobiona pod frameworkiem Materialize z&nbsp;lokalizacją za pomocą Google
-          Maps.</p>
-      </a>
-    </figure>
+      <figure class="green-box">
+        <a class="green-box__link" href="https://kp1976.github.io/Materialize-Biznes" target="_blank" rel="noopener">
+          <img class="green-box__example-img" src="img/Portfolio/materialize/biznes.jpg" alt="obraz aplikacji kalkulatora">
+          <h2 class="green-box__title">Strona Biznesowa</h2>
+          <p class="green-box__text">Strona zrobiona pod frameworkiem Materialize z&nbsp;lokalizacją za pomocą Google
+            Maps.</p>
+        </a>
+      </figure>
 
-    <figure class="green-box">
-      <a class="green-box__link" href="https://kp1976.github.io/Materialize-Firma_IT" target="_blank" rel="noopener">
-        <img class="green-box__example-img" src="img/Portfolio/materialize/firma_IT.jpg" alt="obraz aplikacji kalkulatora">
-        <h2 class="green-box__title">Strona IT</h2>
-        <p class="green-box__text">Strona zrobiona pod frameworkiem Materialize z&nbsp;możliwością założenia konta.</p>
-      </a>
-    </figure>
+      <figure class="green-box">
+        <a class="green-box__link" href="https://kp1976.github.io/Materialize-Firma_IT" target="_blank" rel="noopener">
+          <img class="green-box__example-img" src="img/Portfolio/materialize/firma_IT.jpg" alt="obraz aplikacji kalkulatora">
+          <h2 class="green-box__title">Strona IT</h2>
+          <p class="green-box__text">Strona zrobiona pod frameworkiem Materialize z&nbsp;możliwością założenia konta.</p>
+        </a>
+      </figure>
 
-    <figure class="green-box">
-      <a class="green-box__link" href="https://kp1976.github.io/Materialize-Panel_Logowania" target="_blank" rel="noopener">
-        <img class="green-box__example-img" src="img/Portfolio/materialize/panel_logowania.jpg" alt="obraz aplikacji kalkulatora">
-        <h2 class="green-box__title">Panel Administratora</h2>
-        <p class="green-box__text">Strona zrobiona pod frameworkiem Materialize z&nbsp;możliwością dodawania
-          i&nbsp;kasowania zadań, dodawania postów, kategorii i&nbsp;użytkowników.</p>
-      </a>
-    </figure>
+      <figure class="green-box">
+        <a class="green-box__link" href="https://kp1976.github.io/Materialize-Panel_Logowania" target="_blank" rel="noopener">
+          <img class="green-box__example-img" src="img/Portfolio/materialize/panel_logowania.jpg" alt="obraz aplikacji kalkulatora">
+          <h2 class="green-box__title">Panel Administratora</h2>
+          <p class="green-box__text">Strona zrobiona pod frameworkiem Materialize z&nbsp;możliwością dodawania
+            i&nbsp;kasowania zadań, dodawania postów, kategorii i&nbsp;użytkowników.</p>
+        </a>
+      </figure>
 
-    <figure class="green-box">
-      <a class="green-box__link" href="https://kp1976.github.io/Materialize-Projektowanie/" target="_blank" rel="noopener">
-        <img class="green-box__example-img" src="img/Portfolio/materialize/projektowanie.jpg" alt="obraz aplikacji kalkulatora">
-        <h2 class="green-box__title">Projektowanie</h2>
-        <p class="green-box__text">Strona zrobiona pod frameworkiem Materialize z&nbsp;galerią projektów podzieloną na
-          kategorie.</p>
-      </a>
-    </figure>
+      <figure class="green-box">
+        <a class="green-box__link" href="https://kp1976.github.io/Materialize-Projektowanie/" target="_blank" rel="noopener">
+          <img class="green-box__example-img" src="img/Portfolio/materialize/projektowanie.jpg" alt="obraz aplikacji kalkulatora">
+          <h2 class="green-box__title">Projektowanie</h2>
+          <p class="green-box__text">Strona zrobiona pod frameworkiem Materialize z&nbsp;galerią projektów podzieloną
+            na
+            kategorie.</p>
+        </a>
+      </figure>
 
-    <figure class="green-box">
-      <a class="green-box__link" href="https://kp1976.github.io/POGODA/" target="_blank" rel="noopener">
-        <img class="green-box__example-img" src="img/Portfolio/pogoda.jpg" alt="obraz aplikacji kalkulatora">
-        <h2 class="green-box__title">Pogoda</h2>
-        <p class="green-box__text">Aplikacja, która pokazuje różne czynniki pogodowe w&nbsp;danej lokalizacji ze strony
-          https://api.wunderground.com.</p>
-      </a>
-    </figure>
+      <figure class="green-box">
+        <a class="green-box__link" href="https://kp1976.github.io/POGODA/" target="_blank" rel="noopener">
+          <img class="green-box__example-img" src="img/Portfolio/pogoda.jpg" alt="obraz aplikacji kalkulatora">
+          <h2 class="green-box__title">Pogoda</h2>
+          <p class="green-box__text">Aplikacja, która pokazuje różne czynniki pogodowe w&nbsp;danej lokalizacji ze
+            strony
+            https://api.wunderground.com.</p>
+        </a>
+      </figure>
 
-    <figure class="green-box">
-      <a class="green-box__link" href="https://kp1976.github.io/REDDIT" target="_blank" rel="noopener">
-        <img class="green-box__example-img" src="img/Portfolio/reddit.jpg" alt="obraz aplikacji kalkulatora">
-        <h2 class="green-box__title">REDDIT</h2>
-        <p class="green-box__text">Wyszukiwarka postów REDDIT z&nbsp;sortowaniem i wyborem liczby wyników.</p>
-      </a>
-    </figure>
+      <figure class="green-box">
+        <a class="green-box__link" href="https://kp1976.github.io/REDDIT" target="_blank" rel="noopener">
+          <img class="green-box__example-img" src="img/Portfolio/reddit.jpg" alt="obraz aplikacji kalkulatora">
+          <h2 class="green-box__title">REDDIT</h2>
+          <p class="green-box__text">Wyszukiwarka postów REDDIT z&nbsp;sortowaniem i wyborem liczby wyników.</p>
+        </a>
+      </figure>
 
-    <figure class="green-box">
-      <a class="green-box__link" href="https://kp1976.github.io/GITHUB-USERS-FINDER" target="_blank" rel="noopener">
-        <img class="green-box__example-img" src="img/Portfolio/github_wyszukiwarka.jpg" alt="obraz aplikacji kalkulatora">
-        <h2 class="green-box__title">Wyszukiwarka GitHub</h2>
-        <p class="green-box__text">Wyszukiwarka użytkowników GitHuba. Wyświetla dane i&nbsp;najnowsze repozytoria.</p>
-      </a>
-    </figure>
+      <figure class="green-box">
+        <a class="green-box__link" href="https://kp1976.github.io/GITHUB-USERS-FINDER" target="_blank" rel="noopener">
+          <img class="green-box__example-img" src="img/Portfolio/github_wyszukiwarka.jpg" alt="obraz aplikacji kalkulatora">
+          <h2 class="green-box__title">Wyszukiwarka GitHub</h2>
+          <p class="green-box__text">Wyszukiwarka użytkowników GitHuba. Wyświetla dane i&nbsp;najnowsze repozytoria.</p>
+        </a>
+      </figure>
 
-    <figure class="green-box">
-      <a class="green-box__link" href="https://kp1976.github.io/WEEKLY-WEBDEV-CHALLENGE-1" target="_blank" rel="noopener">
-        <img class="green-box__example-img" src="img/Portfolio/WeeklyWebDevChallenge_01.jpg" alt="obraz aplikacji kalkulatora">
-        <h2 class="green-box__title">WebDevChallenge1</h2>
-        <p class="green-box__text">Strona powstała z&nbsp;gotowego projektu w Photoshopie z&nbsp;grupy na facebooku
-          Weekly WebDev Challenge.</p>
-      </a>
-    </figure>
+      <figure class="green-box">
+        <a class="green-box__link" href="https://kp1976.github.io/WEEKLY-WEBDEV-CHALLENGE-1" target="_blank" rel="noopener">
+          <img class="green-box__example-img" src="img/Portfolio/WeeklyWebDevChallenge_01.jpg" alt="obraz aplikacji kalkulatora">
+          <h2 class="green-box__title">WebDevChallenge1</h2>
+          <p class="green-box__text">Strona powstała z&nbsp;gotowego projektu w Photoshopie z&nbsp;grupy na facebooku
+            Weekly WebDev Challenge.</p>
+        </a>
+      </figure>
 
-    <figure class="green-box">
-      <a class="green-box__link" href="https://kp1976.github.io/WEB_DEV_CHALLENGE_NR37" target="_blank" rel="noopener">
-        <img class="green-box__example-img" src="img/Portfolio/WeeklyWebDevChallenge_37.jpg" alt="obraz aplikacji kalkulatora">
-        <h2 class="green-box__title">WebDevChalleng37</h2>
-        <p class="green-box__text">Strona powstała z&nbsp;gotowego projektu w Photoshopie z&nbsp;grupy na facebooku
-          Weekly WebDev Challenge.</p>
-      </a>
-    </figure>
+      <figure class="green-box">
+        <a class="green-box__link" href="https://kp1976.github.io/WEB_DEV_CHALLENGE_NR37" target="_blank" rel="noopener">
+          <img class="green-box__example-img" src="img/Portfolio/WeeklyWebDevChallenge_37.jpg" alt="obraz aplikacji kalkulatora">
+          <h2 class="green-box__title">WebDevChalleng37</h2>
+          <p class="green-box__text">Strona powstała z&nbsp;gotowego projektu w Photoshopie z&nbsp;grupy na facebooku
+            Weekly WebDev Challenge.</p>
+        </a>
+      </figure>
 
-    <figure class="green-box">
-      <a class="green-box__link" href="https://kp1976.github.io/NUMBER-GUESSER" target="_blank" rel="noopener">
-        <img class="green-box__example-img" src="img/Portfolio/zgadnij_liczbe.jpg" alt="obraz aplikacji kalkulatora">
-        <h2 class="green-box__title">Zgadnij Liczbę</h2>
-        <p class="green-box__text">Aplikacja sprawdza czy zgadłeś liczbę z przedziału od 1 do 10. Masz na to trzy
-          próby.</p>
-      </a>
-    </figure>
+      <figure class="green-box">
+        <a class="green-box__link" href="https://kp1976.github.io/NUMBER-GUESSER" target="_blank" rel="noopener">
+          <img class="green-box__example-img" src="img/Portfolio/zgadnij_liczbe.jpg" alt="obraz aplikacji kalkulatora">
+          <h2 class="green-box__title">Zgadnij Liczbę</h2>
+          <p class="green-box__text">Aplikacja sprawdza czy zgadłeś liczbę z przedziału od 1 do 10. Masz na to trzy
+            próby.</p>
+        </a>
+      </figure>
 
-    <figure class="green-box">
-      <a class="green-box__link" href="https://kp1976.github.io/kafelki/" target="_blank" rel="noopener">
-        <img class="green-box__example-img" src="img/Portfolio/Gra w kafelki.jpg" alt="obraz aplikacji kalkulatora">
-        <h2 class="green-box__title">Gra w Kafelki</h2>
-        <p class="green-box__text">W grze musisz odkrywać pary kafelków o&nbsp;tym samym kolorze. Na końcu pokazuje
-          czas
-          w&nbsp;jakim to zrobiłeś.</p>
-      </a>
-    </figure>
-    <!-- FOOTER -->
-    <footer class="footer">
-      <span class="footer__text">&copy; Krzysztof Pawłowski 2018</span>
-    </footer>
-  </main>
+      <figure class="green-box">
+        <a class="green-box__link" href="https://kp1976.github.io/kafelki/" target="_blank" rel="noopener">
+          <img class="green-box__example-img" src="img/Portfolio/Gra w kafelki.jpg" alt="obraz aplikacji kalkulatora">
+          <h2 class="green-box__title">Gra w Kafelki</h2>
+          <p class="green-box__text">W grze musisz odkrywać pary kafelków o&nbsp;tym samym kolorze. Na końcu pokazuje
+            czas
+            w&nbsp;jakim to zrobiłeś.</p>
+        </a>
+      </figure>
+    </main>
+  </div>
+
+  <!-- FOOTER -->
+  <footer class="footer">
+    <span class="footer__text">&copy; Krzysztof Pawłowski 2018</span>
+  </footer>
 
   <script src="js/menu_aboutme-portfolio.js"></script>
 </body>
