Fix description in two projects

--- a/portfolio.html
+++ b/portfolio.html
@@ -99,7 +99,7 @@
         <a class="green-box__link" href="https://kp1976.github.io/Materialize-Firma_IT" target="_blank" rel="noopener">
           <img class="green-box__example-img" src="img/Portfolio/materialize/firma_IT.jpg" alt="obraz aplikacji kalkulatora">
           <h2 class="green-box__title">Strona IT</h2>
-          <p class="green-box__text">Strona zrobiona pod frameworkiem Materialize z&nbsp;możliwością założenia konta.</p>
+          <p class="green-box__text">Strona zrobiona pod frameworkiem Materialize z&nbsp;wizualizacją założenia konta.</p>
         </a>
       </figure>
 
@@ -107,7 +107,7 @@
         <a class="green-box__link" href="https://kp1976.github.io/Materialize-Panel_Logowania" target="_blank" rel="noopener">
           <img class="green-box__example-img" src="img/Portfolio/materialize/panel_logowania.jpg" alt="obraz aplikacji kalkulatora">
           <h2 class="green-box__title">Panel Administratora</h2>
-          <p class="green-box__text">Strona zrobiona pod frameworkiem Materialize z&nbsp;możliwością dodawania
+          <p class="green-box__text">Strona zrobiona pod frameworkiem Materialize z&nbsp;wizualizacją dodawania
             i&nbsp;kasowania zadań, dodawania postów, kategorii i&nbsp;użytkowników.</p>
         </a>
       </figure>
