Change JS files structure

--- a/aboutme.html
+++ b/aboutme.html
@@ -15,7 +15,7 @@
   <title>O mnie</title>
 </head>
 
-<body style="background-image: none;">
+<body style="background-image: none; background-color: var(--background_dark-clr);">
 
   <!-- MENU -->
   <div class="hamburger-menu">
@@ -298,6 +298,9 @@
     <span class="footer__text">&copy; Krzysztof Pawłowski 2018</span>
   </footer>
 
+  <script src="js/variables.js"></script>
+  <script src="js/menu_classes.js"></script>
   <script src="js/menu_aboutme-portfolio.js"></script>
-  <script src="js/animBalls.js"></script>
 </body>
+
+</html>
