--- a/contact.html
+++ b/contact.html
@@ -56,5 +56,9 @@
     </header>
   </main>
 
-  <script src="js/menu_start-contact.js"></script>
+  <script src="js/variables.js"></script>
+  <script src="js/menu_classes.js"></script>
+  <script src="js/menu_startpage-contact.js"></script>
 </body>
+
+</html>
