--- a/index.html
+++ b/index.html
@@ -58,8 +58,10 @@
       </div>
     </header>
   </main>
-</body>
 
-<script src="js/menu_start-contact.js"></script>
+  <script src="js/variables.js"></script>
+  <script src="js/menu_classes.js"></script>
+  <script src="js/menu_startpage-contact.js"></script>
+</body>
 
 </html>
