Fix html files after validation (w3.org)

--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
   </div>
   <nav class="menu">
     <div class="menu__header">
-      <h1 class="header__my-name"><span class="header__my-name--green">Krzysztof</span>Pawłowski</h1>
+      <h2 class="header__my-name"><span class="header__my-name--green">Krzysztof</span>Pawłowski</h2>
     </div>
     <ul class="menu__list">
       <li class="list__item"><a href="index.html" rel="noopener">strona główna</a></li>
@@ -37,15 +37,15 @@
   <div class="background">
     <!-- HEADER -->
     <header class="header-portfolio">
-      <h1 class="header-portfolio__title">portfolio</h1>
-      <h2 class="header-portfolio__subtitle">Oto przykładowe prace, które stworzyłem...</h2>
+      <h2 class="header-portfolio__title">portfolio</h2>
+      <h3 class="header-portfolio__subtitle">Oto przykładowe prace, które stworzyłem...</h3>
     </header>
 
     <main class="portfolio-container">
       <figure class="green-box">
         <a class="green-box__link" href="https://kp1976.github.io/LOAN-CALCULATOR/" target="_blank" rel="noopener">
           <img class="green-box__example-img" src="img/Portfolio/kalkulator_pozyczkowy.jpg" alt="obraz aplikacji kalkulatora">
-          <h2 class="green-box__title">Kalkulator Pożyczkowy</h2>
+          <h3 class="green-box__title">Kalkulator Pożyczkowy</h3>
           <p class="green-box__text">Aplikacja oblicza miesięczną ratę kredytu do spłacenia. Całkowitą kwotę
             pożyczki i&nbsp;zysk pożyczkodawcy.</p>
         </a>
@@ -54,7 +54,7 @@
       <figure class="green-box">
         <a class="green-box__link" href="https://kp1976.github.io/LISTA-KSIAZEK" target="_blank" rel="noopener">
           <img class="green-box__example-img" src="img/Portfolio/lista_ksiazek.jpg" alt="obraz aplikacji kalkulatora">
-          <h2 class="green-box__title">Lista Książek</h2>
+          <h3 class="green-box__title">Lista Książek</h3>
           <p class="green-box__text">Baza danych książek, gdzie dodajemy tytuł, autora i&nbsp;cenę książki.</p>
         </a>
       </figure>
@@ -62,7 +62,7 @@
       <figure class="green-box">
         <a class="green-box__link" href="https://kp1976.github.io/TO-DOver3" target="_blank" rel="noopener">
           <img class="green-box__example-img" src="img/Portfolio/lista_zadan.jpg" alt="obraz aplikacji kalkulatora">
-          <h2 class="green-box__title">Lista Zadań</h2>
+          <h3 class="green-box__title">Lista Zadań</h3>
           <p class="green-box__text">Lista zadań do wykonania z&nbsp;możliwością kasowania, filtrowania
             i&nbsp;modyfikowania konkretnego zadania.</p>
         </a>
@@ -71,7 +71,7 @@
       <figure class="green-box">
         <a class="green-box__link" href="https://kp1976.github.io/LISTA-ZAKUPOW" target="_blank" rel="noopener">
           <img class="green-box__example-img" src="img/Portfolio/lista_zakupow.jpg" alt="obraz aplikacji kalkulatora">
-          <h2 class="green-box__title">Lista Zakupów</h2>
+          <h3 class="green-box__title">Lista Zakupów</h3>
           <p class="green-box__text">Lista zakupów z&nbsp;możliwością kasowania i&nbsp;modyfikowania konkretnego
             produktu.</p>
         </a>
@@ -80,7 +80,7 @@
       <figure class="green-box">
         <a class="green-box__link" href="https://kp1976.github.io/Materialize-Biuro_Podrozy" target="_blank" rel="noopener">
           <img class="green-box__example-img" src="img/Portfolio/materialize/biuro_podrozy.jpg" alt="obraz aplikacji kalkulatora">
-          <h2 class="green-box__title">Biuro Podróży</h2>
+          <h3 class="green-box__title">Biuro Podróży</h3>
           <p class="green-box__text">Strona zrobiona pod frameworkiem Materialize z&nbsp;galerią, wyszukiwarką
             i&nbsp;kontaktem.</p>
         </a>
@@ -89,7 +89,7 @@
       <figure class="green-box">
         <a class="green-box__link" href="https://kp1976.github.io/Materialize-Biznes" target="_blank" rel="noopener">
           <img class="green-box__example-img" src="img/Portfolio/materialize/biznes.jpg" alt="obraz aplikacji kalkulatora">
-          <h2 class="green-box__title">Strona Biznesowa</h2>
+          <h3 class="green-box__title">Strona Biznesowa</h3>
           <p class="green-box__text">Strona zrobiona pod frameworkiem Materialize z&nbsp;lokalizacją za pomocą Google
             Maps.</p>
         </a>
@@ -98,7 +98,7 @@
       <figure class="green-box">
         <a class="green-box__link" href="https://kp1976.github.io/Materialize-Firma_IT" target="_blank" rel="noopener">
           <img class="green-box__example-img" src="img/Portfolio/materialize/firma_IT.jpg" alt="obraz aplikacji kalkulatora">
-          <h2 class="green-box__title">Strona IT</h2>
+          <h3 class="green-box__title">Strona IT</h3>
           <p class="green-box__text">Strona zrobiona pod frameworkiem Materialize z&nbsp;wizualizacją założenia konta.</p>
         </a>
       </figure>
@@ -106,7 +106,7 @@
       <figure class="green-box">
         <a class="green-box__link" href="https://kp1976.github.io/Materialize-Panel_Logowania" target="_blank" rel="noopener">
           <img class="green-box__example-img" src="img/Portfolio/materialize/panel_logowania.jpg" alt="obraz aplikacji kalkulatora">
-          <h2 class="green-box__title">Panel Administratora</h2>
+          <h3 class="green-box__title">Panel Administratora</h3>
           <p class="green-box__text">Strona zrobiona pod frameworkiem Materialize z&nbsp;wizualizacją dodawania
             i&nbsp;kasowania zadań, dodawania postów, kategorii i&nbsp;użytkowników.</p>
         </a>
@@ -115,7 +115,7 @@
       <figure class="green-box">
         <a class="green-box__link" href="https://kp1976.github.io/Materialize-Projektowanie/" target="_blank" rel="noopener">
           <img class="green-box__example-img" src="img/Portfolio/materialize/projektowanie.jpg" alt="obraz aplikacji kalkulatora">
-          <h2 class="green-box__title">Projektowanie</h2>
+          <h3 class="green-box__title">Projektowanie</h3>
           <p class="green-box__text">Strona zrobiona pod frameworkiem Materialize z&nbsp;galerią projektów podzieloną
             na
             kategorie.</p>
@@ -125,7 +125,7 @@
       <figure class="green-box">
         <a class="green-box__link" href="https://kp1976.github.io/POGODA/" target="_blank" rel="noopener">
           <img class="green-box__example-img" src="img/Portfolio/pogoda.jpg" alt="obraz aplikacji kalkulatora">
-          <h2 class="green-box__title">Pogoda</h2>
+          <h3 class="green-box__title">Pogoda</h3>
           <p class="green-box__text">Aplikacja, która pokazuje różne czynniki pogodowe w&nbsp;danej lokalizacji ze
             strony
             https://api.wunderground.com.</p>
@@ -135,7 +135,7 @@
       <figure class="green-box">
         <a class="green-box__link" href="https://kp1976.github.io/REDDIT" target="_blank" rel="noopener">
           <img class="green-box__example-img" src="img/Portfolio/reddit.jpg" alt="obraz aplikacji kalkulatora">
-          <h2 class="green-box__title">REDDIT</h2>
+          <h3 class="green-box__title">REDDIT</h3>
           <p class="green-box__text">Wyszukiwarka postów REDDIT z&nbsp;sortowaniem i wyborem liczby wyników.</p>
         </a>
       </figure>
@@ -143,7 +143,7 @@
       <figure class="green-box">
         <a class="green-box__link" href="https://kp1976.github.io/GITHUB-USERS-FINDER" target="_blank" rel="noopener">
           <img class="green-box__example-img" src="img/Portfolio/github_wyszukiwarka.jpg" alt="obraz aplikacji kalkulatora">
-          <h2 class="green-box__title">Wyszukiwarka GitHub</h2>
+          <h3 class="green-box__title">Wyszukiwarka GitHub</h3>
           <p class="green-box__text">Wyszukiwarka użytkowników GitHuba. Wyświetla dane i&nbsp;najnowsze repozytoria.</p>
         </a>
       </figure>
@@ -151,7 +151,7 @@
       <figure class="green-box">
         <a class="green-box__link" href="https://kp1976.github.io/WEEKLY-WEBDEV-CHALLENGE-1" target="_blank" rel="noopener">
           <img class="green-box__example-img" src="img/Portfolio/WeeklyWebDevChallenge_01.jpg" alt="obraz aplikacji kalkulatora">
-          <h2 class="green-box__title">WebDevChallenge1</h2>
+          <h3 class="green-box__title">WebDevChallenge1</h3>
           <p class="green-box__text">Strona powstała z&nbsp;gotowego projektu w Photoshopie z&nbsp;grupy na facebooku
             Weekly WebDev Challenge.</p>
         </a>
@@ -160,7 +160,7 @@
       <figure class="green-box">
         <a class="green-box__link" href="https://kp1976.github.io/WEB_DEV_CHALLENGE_NR37" target="_blank" rel="noopener">
           <img class="green-box__example-img" src="img/Portfolio/WeeklyWebDevChallenge_37.jpg" alt="obraz aplikacji kalkulatora">
-          <h2 class="green-box__title">WebDevChalleng37</h2>
+          <h3 class="green-box__title">WebDevChalleng37</h3>
           <p class="green-box__text">Strona powstała z&nbsp;gotowego projektu w Photoshopie z&nbsp;grupy na facebooku
             Weekly WebDev Challenge.</p>
         </a>
@@ -169,7 +169,7 @@
       <figure class="green-box">
         <a class="green-box__link" href="https://kp1976.github.io/NUMBER-GUESSER" target="_blank" rel="noopener">
           <img class="green-box__example-img" src="img/Portfolio/zgadnij_liczbe.jpg" alt="obraz aplikacji kalkulatora">
-          <h2 class="green-box__title">Zgadnij Liczbę</h2>
+          <h3 class="green-box__title">Zgadnij Liczbę</h3>
           <p class="green-box__text">Aplikacja sprawdza czy zgadłeś liczbę z przedziału od 1 do 10. Masz na to trzy
             próby.</p>
         </a>
@@ -177,8 +177,8 @@
 
       <figure class="green-box">
         <a class="green-box__link" href="https://kp1976.github.io/kafelki/" target="_blank" rel="noopener">
-          <img class="green-box__example-img" src="img/Portfolio/Gra w kafelki.jpg" alt="obraz aplikacji kalkulatora">
-          <h2 class="green-box__title">Gra w Kafelki</h2>
+          <img class="green-box__example-img" src="img/Portfolio/Gra_w_kafelki.jpg" alt="obraz aplikacji kalkulatora">
+          <h3 class="green-box__title">Gra w Kafelki</h3>
           <p class="green-box__text">W grze musisz odkrywać pary kafelków o&nbsp;tym samym kolorze. Na końcu pokazuje
             czas
             w&nbsp;jakim to zrobiłeś.</p>
