fix body in anim-balls.js

--- a/aboutme.html
+++ b/aboutme.html
@@ -301,6 +301,7 @@
   <script src="js/variables.js"></script>
   <script src="js/menu_classes.js"></script>
   <script src="js/menu_aboutme-portfolio.js"></script>
+  <script src="js/anim-balls.js"></script>
 </body>
 
 </html>
